--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
         </nav>
         <ul class="contacts list">
           <li class="contacts__item">
-            <a class="contacts__mail link" href="mailto:info@devstudio.com">
-              <svg class="contacts__icon-mail" width="16" height="12">
+            <a class="contacts__link link" href="mailto:info@devstudio.com">
+              <svg class="contacts__icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="contacts__item">
-            <a class="contacts__tel link" href="tel:+380961111111">
-              <svg class="contacts__icon-tel" width="10" height="16">
+            <a class="contacts__link link" href="tel:+380961111111">
+              <svg class="contacts__icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
             >
@@ -53,7 +53,7 @@
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button data-modal-open class="button hero__button" type="button">Замовити послугу</button>
         </div>
-        <div data-modal class="hero__backdrop is-hidden">
+        <div data-modal class="backdrop is-hidden">
           <div class="modal">
             <button data-modal-close class="modal__button-close" type="button">
               <svg  width="11" height="11">
