--- a/portfolio.html
+++ b/portfolio.html
@@ -29,15 +29,15 @@
         </nav>
         <ul class="contacts list">
           <li class="contacts__item">
-            <a class="contacts__mail link" href="mailto:info@devstudio.com">
-              <svg class="contacts__icon-mail" width="16" height="12">
+            <a class="contacts__link link" href="mailto:info@devstudio.com">
+              <svg class="contacts__icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="contacts__item">
-            <a class="contacts__tel link" href="tel:+380961111111">
-              <svg class="contacts__icon-tel" width="10" height="16">
+            <a class="contacts__link link" href="tel:+380961111111">
+              <svg class="contacts__icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
             >
