--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <title>WebStudio - Портфоліо</title>
   </head>
   <body>
@@ -20,23 +20,23 @@
     <header class="page-header">
       <div class="page-header__container container">
         <nav class="header-nav">
-          <a class="logo header-nav__logo link" href="./index.html"><span class="logo__text">Web</span>Studio</a>
-          <ul class="header-nav__pages list">
-            <li class="header-nav__item"><a class="header-nav__link link" href="./index.html">Студія</a></li>
-            <li class="header-nav__item"><a class="header-nav__link link current" href="./portfolio.html">Портфоліо</a></li>
-            <li class="header-nav__item"><a class="header-nav__link link" href="#">Контакти</a></li>
+          <a class="logo header-nav__logo" href="./index.html"><span class="logo__text">Web</span>Studio</a>
+          <ul class="header-nav__pages">
+            <li class="header-nav__item"><a class="header-nav__link" href="./index.html">Студія</a></li>
+            <li class="header-nav__item"><a class="header-nav__link current" href="./portfolio.html">Портфоліо</a></li>
+            <li class="header-nav__item"><a class="header-nav__link" href="#">Контакти</a></li>
           </ul>
         </nav>
-        <ul class="contacts list">
+        <ul class="contacts">
           <li class="contacts__item">
-            <a class="contacts__link link" href="mailto:info@devstudio.com">
+            <a class="contacts__link" href="mailto:info@devstudio.com">
               <svg class="contacts__icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="contacts__item">
-            <a class="contacts__link link" href="tel:+380961111111">
+            <a class="contacts__link" href="tel:+380961111111">
               <svg class="contacts__icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
@@ -51,7 +51,7 @@
         <div class="container">
           <h1 class="visually-hidden">Наші проєкти</h1>
           <!-- Фільтри -->
-          <ul class="filters list">
+          <ul class="filters">
             <li class="filters__item"><button class="filters__button" type="button">Веб-сайти</button></li>
             <li class="filters__item"><button class="filters__button" type="button">Додатки</button></li>
             <li class="filters__item"><button class="filters__button" type="button">Усі</button></li>
@@ -59,9 +59,9 @@
             <li class="filters__item"><button class="filters__button" type="button">Маркетинг</button></li>
           </ul>
           <!-- Проєкти -->
-          <ul class="projects list">
+          <ul class="projects">
             <li class="projects__item">
-              <a class="projects__link link" href="#">
+              <a class="projects__link" href="#">
                 <div class="projects__thumb">
                   <img
                     class="projects__image"
@@ -85,7 +85,7 @@
               </a>
             </li>
             <li class="projects__item">
-              <a class="projects__link link" href="#">
+              <a class="projects__link" href="#">
                 <div class="projects__thumb">
                   <img
                     class="projects__image"
@@ -109,7 +109,7 @@
               </a>
             </li>
             <li class="projects__item">
-              <a class="projects__link link" href="#">
+              <a class="projects__link" href="#">
                 <div class="projects__thumb">
                   <img
                     class="projects__image"
@@ -133,7 +133,7 @@
               </a>
             </li>
             <li class="projects__item">
-              <a class="projects__link link" href="#">
+              <a class="projects__link" href="#">
                 <div class="projects__thumb">
                   <img
                     class="projects__image"
@@ -157,7 +157,7 @@
               </a>
             </li>
             <li class="projects__item">
-              <a class="projects__link link" href="#">
+              <a class="projects__link" href="#">
                 <div class="projects__thumb">
                   <img
                     class="projects__image"
@@ -181,7 +181,7 @@
               </a>
             </li>
             <li class="projects__item">
-              <a class="projects__link link" href="#">
+              <a class="projects__link" href="#">
                 <div class="projects__thumb">
                   <img
                     class="projects__image"
@@ -205,7 +205,7 @@
               </a>
             </li>
             <li class="projects__item">
-              <a class="projects__link link" href="#">
+              <a class="projects__link" href="#">
                 <div class="projects__thumb">
                   <img
                     class="projects__image"
@@ -230,7 +230,7 @@
               </a>
             </li>
             <li class="projects__item">
-              <a class="projects__link link" href="#">
+              <a class="projects__link" href="#">
                 <div class="projects__thumb">
                   <img
                     class="projects__image"
@@ -255,7 +255,7 @@
               </a>
             </li>
             <li class="projects__item">
-              <a class="projects__link link" href="#">
+              <a class="projects__link" href="#">
                 <div class="projects__thumb">
                   <img
                     class="projects__image"
@@ -286,12 +286,12 @@
      <footer class="page-footer">
       <div class="container page-footer__container">
         <div class="page-footer__contacts">
-          <a class="logo page-footer__logo link" href="./index.html"><span class="logo__text">Web</span>Studio</a>
+          <a class="logo page-footer__logo" href="./index.html"><span class="logo__text">Web</span>Studio</a>
           <address class="address">
-            <ul class="address__list list">
+            <ul class="address__list">
               <li class="address__item">
                 <a
-                  class="address__link link"
+                  class="address__link"
                   href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
@@ -299,17 +299,17 @@
                 >
               </li>
               <li class="address__item">
-                <a class="address__link address__link--translucent link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="address__link address__link--translucent" href="mailto:info@devstudio.com">info@devstudio.com</a>
               </li>
               <li class="address__item">
-                <a class="address__link address__link--translucent link" href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="address__link address__link--translucent" href="tel:+380961111111">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
         <div class="page-footer__links">
           <b class="page-footer__text">Приєднуйтесь</b>
-          <ul class="social-links page-footer__social-links list">
+          <ul class="social-links page-footer__social-links">
             <li class="social-links__item">
               <a class="social-links__link page-footer__link" aria-label="instagram" href="#"
                 ><svg class="social-links__icon social-links__icon--white" width="20" height="20">
